--- a/PlaceLine/View/Resources/Xib/DetailView.xib
+++ b/PlaceLine/View/Resources/Xib/DetailView.xib
@@ -16,14 +16,14 @@
             <rect key="frame" x="0.0" y="0.0" width="430" height="230"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anıtkabir" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TZD-Pm-Hu6">
-                    <rect key="frame" x="180.5" y="5" width="69" height="22"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anıtkabir" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TZD-Pm-Hu6">
+                    <rect key="frame" x="36" y="5" width="358" height="22"/>
                     <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="16"/>
                     <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="n2Y-Am-3rE">
-                    <rect key="frame" x="0.0" y="54" width="430" height="176"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="n2Y-Am-3rE">
+                    <rect key="frame" x="0.0" y="51" width="430" height="179"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PNt-Bi-RJ5">
                         <size key="itemSize" width="50" height="50"/>
@@ -32,23 +32,70 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OOC-yF-ijq">
+                    <rect key="frame" x="2" y="29" width="426" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="sPS-SS-fAM">
+                    <rect key="frame" x="205" y="105" width="20" height="20"/>
+                    <color key="color" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </activityIndicatorView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XVP-gr-sbV">
+                    <rect key="frame" x="395" y="5" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="7iE-qO-xPU"/>
+                        <constraint firstAttribute="height" constant="30" id="Sll-p2-d3b"/>
+                    </constraints>
+                    <state key="normal" image="close"/>
+                    <connections>
+                        <action selector="closeClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="9rD-xe-87h"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iPI-bH-B5x">
+                    <rect key="frame" x="5" y="5" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="5E4-iS-IZU"/>
+                        <constraint firstAttribute="height" constant="30" id="bo0-K4-nOc"/>
+                    </constraints>
+                    <color key="tintColor" red="0.56168860200000004" green="0.83842653040000004" blue="0.76273804899999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <connections>
+                        <action selector="addListClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="pFq-OY-GyS"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.62625749139999998" green="0.35686274509999999" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="n2Y-Am-3rE" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="Hbr-dV-eK9"/>
+                <constraint firstItem="iPI-bH-B5x" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="0ie-aQ-XEW"/>
+                <constraint firstItem="XVP-gr-sbV" firstAttribute="leading" secondItem="TZD-Pm-Hu6" secondAttribute="trailing" constant="1" id="1xi-If-ciT"/>
+                <constraint firstItem="iPI-bH-B5x" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="CDN-UV-oQv"/>
+                <constraint firstItem="sPS-SS-fAM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="CaU-e2-Uqy"/>
+                <constraint firstItem="OOC-yF-ijq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="2" id="EBT-sJ-RCW"/>
                 <constraint firstItem="n2Y-Am-3rE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="N4l-sd-ept"/>
+                <constraint firstItem="TZD-Pm-Hu6" firstAttribute="leading" secondItem="iPI-bH-B5x" secondAttribute="trailing" constant="1" id="R00-rQ-fyO"/>
+                <constraint firstItem="n2Y-Am-3rE" firstAttribute="top" secondItem="OOC-yF-ijq" secondAttribute="bottom" constant="5" id="UI7-gR-mfp"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="OOC-yF-ijq" secondAttribute="trailing" constant="2" id="Wu3-L6-rus"/>
                 <constraint firstItem="TZD-Pm-Hu6" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="Xqu-eY-iPP"/>
+                <constraint firstAttribute="trailing" secondItem="XVP-gr-sbV" secondAttribute="trailing" constant="5" id="Y6L-3h-6aj"/>
+                <constraint firstItem="XVP-gr-sbV" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="efL-Lg-w3g"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="n2Y-Am-3rE" secondAttribute="trailing" id="r3A-Wy-MqG"/>
-                <constraint firstItem="TZD-Pm-Hu6" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="sNG-0p-WGe"/>
+                <constraint firstItem="OOC-yF-ijq" firstAttribute="top" secondItem="TZD-Pm-Hu6" secondAttribute="bottom" constant="2" id="tO8-P2-byf"/>
+                <constraint firstItem="sPS-SS-fAM" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="xLl-eR-Xuf"/>
                 <constraint firstAttribute="bottom" secondItem="n2Y-Am-3rE" secondAttribute="bottom" id="z6x-mb-Fzw"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="addressLabel" destination="OOC-yF-ijq" id="eT8-Fp-1WE"/>
                 <outlet property="collectionView" destination="n2Y-Am-3rE" id="4ih-x4-2Ze"/>
+                <outlet property="loadingIndicator" destination="sPS-SS-fAM" id="LQP-tw-vin"/>
                 <outlet property="titleLabel" destination="TZD-Pm-Hu6" id="RC4-YW-QbH"/>
             </connections>
-            <point key="canvasLocation" x="143.47826086956522" y="-78.013392857142847"/>
+            <point key="canvasLocation" x="143.47826086956522" y="-78.348214285714278"/>
         </view>
     </objects>
+    <resources>
+        <image name="close" width="24" height="24"/>
+    </resources>
 </document>
